[package]
name = "minions"
version = "0.1.0"
authors = ["BlahGeek <i@BlahGeek.com>"]

[features]
default = ["use-gtk"]
use-gtk = ["gtk", "gdk", "glib", "gdk-pixbuf", "gtk-sys"]

[lib]
name = "minions"
path = "src/lib.rs"
doc = false

[[bin]]
name = "minions"
path = "src/bin/minions.rs"

[dependencies]
toml = "0.4.1"
clap = "2.24.2"
htmlescape = "0.3.1"
serde = "1.0"
serde_derive = "1.0.8"
serde_json = "1.0"
uuid = { version = "0.5.0", features = ["v4"] }
log = "0.3.7"
env_logger = "0.4.3"
lazy_static = "0.2.8"
rust-ini = "0.10.0"
shlex = "0.1.1"
url = "1.5.0"
reqwest = "^0.6"
rust-crypto = "^0.2"
nix = "^0.8"
libc = "^0.2"
chrono = "^0.4"
glib-sys = "0.3.4"

glib = { version = "0.1.3", optional = true }
gdk = { version = "0.5.3", optional = true }
gdk-pixbuf = { version = "0.1.3", optional = true }
gtk = { version = "0.1.3", features = ["v3_10"], optional = true }
gtk-sys = { version = "0.3.4", optional = true }
