[package]
name = "minions"
version = "0.5.3"
edition = "2018"
authors = ["BlahGeek <i@BlahGeek.com>"]

[lib]
name = "minions"
path = "src/lib.rs"
doc = false

[[bin]]
name = "minions"
path = "src/bin/minions.rs"

[dependencies]
toml = "0.4"
byteorder = "1"
clap = "2.24"
htmlescape = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "0.5", features = ["v4"] }
log = "0.4"
fern = { version = "0.5", features = ["colored"] }
shlex = "0.1"
url = "1.5"
reqwest = "0.9.18"
rust-crypto = "0.2"
rust-ini = "0.11"
nix = "0.8"
libc = "0.2"
chrono = "0.4"
glib-sys = "0.9"
glib = "0.9"
gdk = "0.12"
gdk-pixbuf = "0.8"
gdk-pixbuf-sys = "0.9"
gtk = { version = "0.8", features = ["v3_16"] }
gtk-sys = "0.9"
lru-cache = "0.1.1"
pinyin = "0.2"
rusqlite = "0.21"
lazy_static = "1.0"
error-chain = "0.12"
dirs = "2.0"
